# BrainsCogs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  info.json  pyproject.toml  requirements.txt
Speak/: __init__.py
advancedlock/: advancedlock.py  info.json
autodelete/: __init__.py  autodelete.py  info.json
channellock/: __init__.py  channellock.py  info.json
docs/: Makefile  requirements.txt
docs/source/: AutoDelete.rst  ChannelLock.rst  FAQ.rst  MinecraftRCON.rst  Pokedex.rst  Repo Setup.rst  Speak.rst  SwitchCodes.rst  conf.py  index.rst  installation.rst
friendcodes/: switchcodes.py
kickwarn/: __init__.py  info.json  kickwarn.py
legacy/: __init__.py  info.json  legacy.py
minecraftrcon/: __init__.py  info.json  minecraftrcon.py
oldspeak/: __init__.py  oldspeak.py
pkhex/: __init__.py  info.json  pkhex.py
pokedex/: __init__.py  helpers.py  info.json  pokedex.py  pokemon.txt
rolecommands/: __init__.py  info.json  rolecommands.py
speak/: __init__.py  info.json  speak.py
switchcodes/: __init__.py  info.json  switchcodes.py
tags/: __init__.py  abc.py  commands.py  converters.py  core.py  objects.py  owner.py  processor.py
test/: __init__.py  speak.py
